third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/conflicting_default.rs
#[derive(Default, num_enum::Default)]
#[repr(u8)]
enum Number {
    #[default]
    Zero,
}

fn main() {
}
